--- a/server/views/_layout.html
+++ b/server/views/_layout.html
@@ -16,8 +16,8 @@
 
   {% block body %}{% endblock %}
 
-  <script src="/js/lib.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="/scripts/lib.js"></script>
+  <script src="/scripts/app.js"></script>
 
 </body>
 </html>
