--- a/server/views/home.html
+++ b/server/views/home.html
@@ -1,7 +1,8 @@
-{% extends "site_layout.html" %}
+{% extends "_layout.html" %}
 
 {% block body %}
   <div class="container" data-ng-controller="HomeCtrl">
+    <input ng-model="title">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -11,8 +12,8 @@
       </thead>
       <tbody>
         <tr data-ng-repeat="country in countries">
-          <td>{{country.name}}</td>
-          <td>{{country.population}}</td>
+          <td>[[ country.name ]]</td>
+          <td>[[ country.population ]]</td>
         </tr>
       </tbody>
     </table>
